Updated resume, added check for number of blog posts, added current work section

--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,10 @@ threadsafe: true
 
 # [START handlers]
 handlers:
+# - url: /blog/files
+#   static_dir: blog/static/files
+- url: /static/
+  static_dir: blog/static/
 - url: /blog/files
   static_dir: blog/static/files
 - url: /.*
